// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VehicleCard /> should be render bussiness price 1`] = `
<div
  className="card"
  data-testid="card"
>
  <div
    className="card-header"
  >
    <div>
      Factory Order
    </div>
    
  </div>
  <img
    className="card-image"
    data-testid="card-image"
    loading="lazy"
    onError={[Function]}
    sizes="(min-width:320px) 800px, 1200px"
    src="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1920,width=1920,quality=75,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg"
    srcSet="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=320,width=320,quality=60,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg 320w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=800,width=800,quality=70,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg 800w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1200,width=1200,quality=75,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg 1200w"
  />
  <div
    className="title"
  >
    <a
      className="heading link -black -large"
      data-menu={null}
      data-testid="heading-link"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="heading -pb-100 -primary -large"
      >
        
      </span>
      <span
        className="heading -dark -small"
      >
        test
      </span>
    </a>
  </div>
  <div
    className="features"
  >
    <div>
      <i
        className="icon"
      >
        <i
          className="icon -dark"
        >
          <svg
            height="1em"
            viewBox="0 0 64 64"
            width="1em"
          >
            <title>
              Transmission
            </title>
            <path
              d="M43.1482 30.8483H21.0127V33.3082H43.1482V30.8483Z"
              fill="currentColor"
            />
            <path
              d="M25.4837 24.0008C26.4556 22.2098 25.7916 19.9701 24.0007 18.9982C22.2097 18.0263 19.97 18.6903 18.9981 20.4812C18.0262 22.2722 18.6902 24.5119 20.4812 25.4838C22.2721 26.4557 24.5119 25.7917 25.4837 24.0008Z"
              fill="currentColor"
            />
            <path
              d="M22.2402 45.6046C24.2777 45.6046 25.9294 43.9529 25.9294 41.9154C25.9294 39.8779 24.2777 38.2262 22.2402 38.2262C20.2027 38.2262 18.551 39.8779 18.551 41.9154C18.551 43.9529 20.2027 45.6046 22.2402 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M35.4777 23.6657C36.2641 21.7872 35.3788 19.6267 33.5002 18.8402C31.6217 18.0538 29.4612 18.9391 28.6747 20.8177C27.8883 22.6962 28.7736 24.8567 30.6522 25.6432C32.5307 26.4296 34.6912 25.5443 35.4777 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M32.078 45.6046C34.1155 45.6046 35.7673 43.9529 35.7673 41.9154C35.7673 39.8779 34.1155 38.2262 32.078 38.2262C30.0405 38.2262 28.3888 39.8779 28.3888 41.9154C28.3888 43.9529 30.0405 45.6046 32.078 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M23.4724 23.4557H21.0107V40.6866H23.4724V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M33.3105 23.4557H30.848V40.6866H33.3105V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M45.3155 23.6657C46.102 21.7872 45.2167 19.6267 43.3381 18.8402C41.4595 18.0538 39.2991 18.9391 38.5126 20.8177C37.7261 22.6962 38.6114 24.8567 40.49 25.6432C42.3686 26.4296 44.529 25.5443 45.3155 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M43.1483 23.4557H40.6859V33.3082H43.1483V23.4557Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M32 60C47.464 60 60 47.464 60 32C60 16.536 47.464 4 32 4C16.536 4 4 16.536 4 32C4 47.464 16.536 60 32 60ZM32 56C45.2548 56 56 45.2548 56 32C56 18.7452 45.2548 8 32 8C18.7452 8 8 18.7452 8 32C8 45.2548 18.7452 56 32 56Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </i>
      </i>
      <span
        className="text -xsmall -darker"
      >
        Transmission
      </span>
      <span
        className="text -xsmall -dark"
      >
        Manual
      </span>
    </div>
  </div>
  <div
    className="-flex-h"
  >
    <div
      className="price -large -black"
    >
      <span
        className="price--sub"
      >
        £
      </span>
      <span
        className="price--pounds"
      >
        138
      </span>
      <span
        className="price--sub"
      >
        .
        91
      </span>
      <div
        className="price--label"
      >
        Per Month Exc.VAT
      </div>
    </div>
    <a
      className="button link -teal -regular -solid"
      data-menu={null}
      data-testid="view-offer"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="button--inner"
      >
        View Offer
      </div>
    </a>
  </div>
  <div
    className="card-footer"
  >
    <button
      className="-dark -xsmall -clear"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -dark"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M236 175.721L200.639 105L128 105L128 65L384 65V105L311.361 105L276 175.721V386.88H404V447H108V386.88H236V175.721Z"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M43 307.681C84.6128 366.095 171.387 366.095 213 307.681L128 128L43 307.681ZM165.037 299.831L128 221.54L90.9631 299.831C113.022 315.378 142.978 315.378 165.037 299.831Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M469 307.681C427.387 366.095 340.613 366.095 299 307.681L384 128L469 307.681ZM384 221.54L421.037 299.831C398.978 315.378 369.022 315.378 346.963 299.831L384 221.54Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
          </svg>
        </i>
        Compare
      </div>
    </button>
  </div>
</div>
`;

exports[`<VehicleCard /> should be render correctly 1`] = `
<div
  className="card"
  data-testid="card"
>
  <div
    className="card-header"
  >
    <div>
      Factory Order
    </div>
    
  </div>
  <img
    className="card-image"
    data-testid="card-image"
    loading="lazy"
    onError={[Function]}
    sizes="(min-width:320px) 800px, 1200px"
    src="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1920,width=1920,quality=75,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg"
    srcSet="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=320,width=320,quality=60,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg 320w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=800,width=800,quality=70,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg 800w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1200,width=1200,quality=75,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg 1200w"
  />
  <div
    className="title"
  >
    <a
      className="heading link -black -large"
      data-menu={null}
      data-testid="heading-link"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="heading -pb-100 -primary -large"
      >
        
      </span>
      <span
        className="heading -dark -small"
      >
        test
      </span>
    </a>
  </div>
  <div
    className="features"
  >
    <div>
      <i
        className="icon"
      >
        <i
          className="icon -dark"
        >
          <svg
            height="1em"
            viewBox="0 0 64 64"
            width="1em"
          >
            <title>
              Transmission
            </title>
            <path
              d="M43.1482 30.8483H21.0127V33.3082H43.1482V30.8483Z"
              fill="currentColor"
            />
            <path
              d="M25.4837 24.0008C26.4556 22.2098 25.7916 19.9701 24.0007 18.9982C22.2097 18.0263 19.97 18.6903 18.9981 20.4812C18.0262 22.2722 18.6902 24.5119 20.4812 25.4838C22.2721 26.4557 24.5119 25.7917 25.4837 24.0008Z"
              fill="currentColor"
            />
            <path
              d="M22.2402 45.6046C24.2777 45.6046 25.9294 43.9529 25.9294 41.9154C25.9294 39.8779 24.2777 38.2262 22.2402 38.2262C20.2027 38.2262 18.551 39.8779 18.551 41.9154C18.551 43.9529 20.2027 45.6046 22.2402 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M35.4777 23.6657C36.2641 21.7872 35.3788 19.6267 33.5002 18.8402C31.6217 18.0538 29.4612 18.9391 28.6747 20.8177C27.8883 22.6962 28.7736 24.8567 30.6522 25.6432C32.5307 26.4296 34.6912 25.5443 35.4777 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M32.078 45.6046C34.1155 45.6046 35.7673 43.9529 35.7673 41.9154C35.7673 39.8779 34.1155 38.2262 32.078 38.2262C30.0405 38.2262 28.3888 39.8779 28.3888 41.9154C28.3888 43.9529 30.0405 45.6046 32.078 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M23.4724 23.4557H21.0107V40.6866H23.4724V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M33.3105 23.4557H30.848V40.6866H33.3105V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M45.3155 23.6657C46.102 21.7872 45.2167 19.6267 43.3381 18.8402C41.4595 18.0538 39.2991 18.9391 38.5126 20.8177C37.7261 22.6962 38.6114 24.8567 40.49 25.6432C42.3686 26.4296 44.529 25.5443 45.3155 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M43.1483 23.4557H40.6859V33.3082H43.1483V23.4557Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M32 60C47.464 60 60 47.464 60 32C60 16.536 47.464 4 32 4C16.536 4 4 16.536 4 32C4 47.464 16.536 60 32 60ZM32 56C45.2548 56 56 45.2548 56 32C56 18.7452 45.2548 8 32 8C18.7452 8 8 18.7452 8 32C8 45.2548 18.7452 56 32 56Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </i>
      </i>
      <span
        className="text -xsmall -darker"
      >
        Transmission
      </span>
      <span
        className="text -xsmall -dark"
      >
        Manual
      </span>
    </div>
  </div>
  <div
    className="-flex-h"
  >
    <div
      className="price -large -black"
    >
      <span
        className="price--sub"
      >
        £
      </span>
      <span
        className="price--pounds"
      >
        189
      </span>
      <span
        className="price--sub"
      >
        .
        97
      </span>
      <div
        className="price--label"
      >
        Per Month Inc.VAT
      </div>
    </div>
    <a
      className="button link -teal -regular -solid"
      data-menu={null}
      data-testid="view-offer"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="button--inner"
      >
        View Offer
      </div>
    </a>
  </div>
  <div
    className="card-footer"
  >
    <button
      className="-dark -xsmall -clear"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -dark"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M236 175.721L200.639 105L128 105L128 65L384 65V105L311.361 105L276 175.721V386.88H404V447H108V386.88H236V175.721Z"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M43 307.681C84.6128 366.095 171.387 366.095 213 307.681L128 128L43 307.681ZM165.037 299.831L128 221.54L90.9631 299.831C113.022 315.378 142.978 315.378 165.037 299.831Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M469 307.681C427.387 366.095 340.613 366.095 299 307.681L384 128L469 307.681ZM384 221.54L421.037 299.831C398.978 315.378 369.022 315.378 346.963 299.831L384 221.54Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
          </svg>
        </i>
        Compare
      </div>
    </button>
  </div>
</div>
`;

exports[`<VehicleCard /> should have link in View Offer 1`] = `
<div
  className="card"
  data-testid="card"
>
  <div
    className="card-header"
  >
    <div>
      Factory Order
    </div>
    
  </div>
  <img
    className="card-image"
    data-testid="card-image"
    loading="lazy"
    onError={[Function]}
    sizes="(min-width:320px) 800px, 1200px"
    src="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1920,width=1920,quality=75,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg"
    srcSet="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=320,width=320,quality=60,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg 320w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=800,width=800,quality=70,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg 800w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1200,width=1200,quality=75,sharpness=0,metadata=none/https://images.autorama.co.uk/Photos/Cap/Vehicles/157703/cap-86343-157703.jpg 1200w"
  />
  <div
    className="title"
  >
    <a
      className="heading link -black -large"
      data-menu={null}
      data-testid="heading-link"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
    >
      <span
        className="heading -pb-100 -primary -large"
      >
        
      </span>
      <span
        className="heading -dark -small"
      >
        test
      </span>
    </a>
  </div>
  <div
    className="features"
  >
    <div>
      <i
        className="icon"
      >
        <i
          className="icon -dark"
        >
          <svg
            height="1em"
            viewBox="0 0 64 64"
            width="1em"
          >
            <title>
              Transmission
            </title>
            <path
              d="M43.1482 30.8483H21.0127V33.3082H43.1482V30.8483Z"
              fill="currentColor"
            />
            <path
              d="M25.4837 24.0008C26.4556 22.2098 25.7916 19.9701 24.0007 18.9982C22.2097 18.0263 19.97 18.6903 18.9981 20.4812C18.0262 22.2722 18.6902 24.5119 20.4812 25.4838C22.2721 26.4557 24.5119 25.7917 25.4837 24.0008Z"
              fill="currentColor"
            />
            <path
              d="M22.2402 45.6046C24.2777 45.6046 25.9294 43.9529 25.9294 41.9154C25.9294 39.8779 24.2777 38.2262 22.2402 38.2262C20.2027 38.2262 18.551 39.8779 18.551 41.9154C18.551 43.9529 20.2027 45.6046 22.2402 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M35.4777 23.6657C36.2641 21.7872 35.3788 19.6267 33.5002 18.8402C31.6217 18.0538 29.4612 18.9391 28.6747 20.8177C27.8883 22.6962 28.7736 24.8567 30.6522 25.6432C32.5307 26.4296 34.6912 25.5443 35.4777 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M32.078 45.6046C34.1155 45.6046 35.7673 43.9529 35.7673 41.9154C35.7673 39.8779 34.1155 38.2262 32.078 38.2262C30.0405 38.2262 28.3888 39.8779 28.3888 41.9154C28.3888 43.9529 30.0405 45.6046 32.078 45.6046Z"
              fill="currentColor"
            />
            <path
              d="M23.4724 23.4557H21.0107V40.6866H23.4724V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M33.3105 23.4557H30.848V40.6866H33.3105V23.4557Z"
              fill="currentColor"
            />
            <path
              d="M45.3155 23.6657C46.102 21.7872 45.2167 19.6267 43.3381 18.8402C41.4595 18.0538 39.2991 18.9391 38.5126 20.8177C37.7261 22.6962 38.6114 24.8567 40.49 25.6432C42.3686 26.4296 44.529 25.5443 45.3155 23.6657Z"
              fill="currentColor"
            />
            <path
              d="M43.1483 23.4557H40.6859V33.3082H43.1483V23.4557Z"
              fill="currentColor"
            />
            <path
              clipRule="evenodd"
              d="M32 60C47.464 60 60 47.464 60 32C60 16.536 47.464 4 32 4C16.536 4 4 16.536 4 32C4 47.464 16.536 60 32 60ZM32 56C45.2548 56 56 45.2548 56 32C56 18.7452 45.2548 8 32 8C18.7452 8 8 18.7452 8 32C8 45.2548 18.7452 56 32 56Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </i>
      </i>
      <span
        className="text -xsmall -darker"
      >
        Transmission
      </span>
      <span
        className="text -xsmall -dark"
      >
        Manual
      </span>
    </div>
  </div>
  <div
    className="-flex-h"
  >
    <div
      className="price -large -black"
    >
      <span
        className="price--sub"
      >
        £
      </span>
      <span
        className="price--pounds"
      >
        138
      </span>
      <span
        className="price--sub"
      >
        .
        91
      </span>
      <div
        className="price--label"
      >
        Per Month Exc.VAT
      </div>
    </div>
    <a
      className="button link -teal -regular -solid"
      data-menu={null}
      data-testid="view-offer"
      href="/car-leasing/vauxhall/crossland-x/bodystylename/slug"
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="button--inner"
      >
        View Offer
      </div>
    </a>
  </div>
  <div
    className="card-footer"
  >
    <button
      className="-dark -xsmall -clear"
      onClick={[Function]}
    >
      <div
        className="button--inner"
      >
        <i
          className="icon -dark"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M236 175.721L200.639 105L128 105L128 65L384 65V105L311.361 105L276 175.721V386.88H404V447H108V386.88H236V175.721Z"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M43 307.681C84.6128 366.095 171.387 366.095 213 307.681L128 128L43 307.681ZM165.037 299.831L128 221.54L90.9631 299.831C113.022 315.378 142.978 315.378 165.037 299.831Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
            <path
              clipRule="evenodd"
              d="M469 307.681C427.387 366.095 340.613 366.095 299 307.681L384 128L469 307.681ZM384 221.54L421.037 299.831C398.978 315.378 369.022 315.378 346.963 299.831L384 221.54Z"
              fillRule="evenodd"
              style={
                Object {
                  "fill": "var(--class-color)",
                }
              }
            />
          </svg>
        </i>
        Compare
      </div>
    </button>
  </div>
</div>
`;
